src/snapshots/pbsql__tests__translator__parser_error.snap
---
source: src/lib.rs
expression: report
---
database_names: ~
translated_query:
  Err: "sql parser error: Unterminated string literal at Line: 3, Column 62"
original_query:
  - "INSERT INTO \"~/books/matches\" (\"id\", \"loserId\", \"winnerId\", \"matchDate\")"
  - "VALUES (?, ?, DATETIME('now'), CURRENT_TIMESTAMP('derp))"
