src/snapshots/pbsql__tests__translator__select_wildcard.snap
---
source: src/lib.rs
expression: report
---
database_names:
  ~/heyy: main
translated_query:
  Ok:
    - - SELECT
      - "  *"
      - FROM
      - "  main.table_contents"
original_query:
  - "select * from \"~/heyy\""
