src/snapshots/pbsql__tests__translator__unsupported_statement_type.snap
---
source: src/lib.rs
expression: report
---
database_names: ~
translated_query:
  Err: "not implemented: Statement::Close"
original_query:
  - close my_eyes;
